trunk/Archive2/53/270573bd2a0eb6/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
In file included from /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++allocator.h:33:0,
                 from /usr/include/c++/4.8/bits/allocator.h:46,
                 from /usr/include/c++/4.8/string:41,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from main.cpp:1:
/usr/include/c++/4.8/ext/new_allocator.h: In instantiation of 'void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = Object; _Args = {Object}; _Tp = Object]':
/usr/include/c++/4.8/bits/alloc_traits.h:254:4:   required from 'static typename std::enable_if<std::allocator_traits<_Alloc>::__construct_helper<_Tp, _Args>::value, void>::type std::allocator_traits<_Alloc>::_S_construct(_Alloc&, _Tp*, _Args&& ...) [with _Tp = Object; _Args = {Object}; _Alloc = std::allocator<Object>; typename std::enable_if<std::allocator_traits<_Alloc>::__construct_helper<_Tp, _Args>::value, void>::type = void]'
/usr/include/c++/4.8/bits/alloc_traits.h:393:57:   required from 'static decltype (_S_construct(__a, __p, (forward<_Args>)(std::allocator_traits::construct::__args)...)) std::allocator_traits<_Alloc>::construct(_Alloc&, _Tp*, _Args&& ...) [with _Tp = Object; _Args = {Object}; _Alloc = std::allocator<Object>; decltype (_S_construct(__a, __p, (forward<_Args>)(std::allocator_traits::construct::__args)...)) = <type error>]'
/usr/include/c++/4.8/bits/vector.tcc:97:40:   required from 'void std::vector<_Tp, _Alloc>::emplace_back(_Args&& ...) [with _Args = {Object}; _Tp = Object; _Alloc = std::allocator<Object>]'
/usr/include/c++/4.8/bits/stl_vector.h:920:36:   required from 'void std::vector<_Tp, _Alloc>::push_back(std::vector<_Tp, _Alloc>::value_type&&) [with _Tp = Object; _Alloc = std::allocator<Object>; std::vector<_Tp, _Alloc>::value_type = Object]'
main.cpp:26:31:   required from here
/usr/include/c++/4.8/ext/new_allocator.h:120:4: error: use of deleted function 'Object::Object(const Object&)'
  { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
    ^
main.cpp:11:8: note: 'Object::Object(const Object&)' is implicitly deleted because the default definition would be ill-formed:
 struct Object {
        ^
main.cpp:11:8: error: use of deleted function 'std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = Data; _Dp = std::default_delete<Data>]'
In file included from /usr/include/c++/4.8/memory:81:0,
                 from main.cpp:2:
/usr/include/c++/4.8/bits/unique_ptr.h:273:7: error: declared here
       unique_ptr(const unique_ptr&) = delete;
       ^
In file included from /usr/include/c++/4.8/memory:64:0,
                 from main.cpp:2:
/usr/include/c++/4.8/bits/stl_construct.h: In instantiation of 'void std::_Construct(_T1*, _Args&& ...) [with _T1 = Object; _Args = {Object}]':
/usr/include/c++/4.8/bits/stl_uninitialized.h:75:53:   required from 'static _ForwardIterator std::__uninitialized_copy<_TrivialValueTypes>::__uninit_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = std::move_iterator<Object*>; _ForwardIterator = Object*; bool _TrivialValueTypes = false]'
/usr/include/c++/4.8/bits/stl_uninitialized.h:117:41:   required from '_ForwardIterator std::uninitialized_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = std::move_iterator<Object*>; _ForwardIterator = Object*]'
/usr/include/c++/4.8/bits/stl_uninitialized.h:258:63:   required from '_ForwardIterator std::__uninitialized_copy_a(_InputIterator, _InputIterator, _ForwardIterator, std::allocator<_Tp>&) [with _InputIterator = std::move_iterator<Object*>; _ForwardIterator = Object*; _Tp = Object]'
/usr/include/c++/4.8/bits/stl_uninitialized.h:281:69:   required from '_ForwardIterator std::__uninitialized_move_if_noexcept_a(_InputIterator, _InputIterator, _ForwardIterator, _Allocator&) [with _InputIterator = Object*; _ForwardIterator = Object*; _Allocator = std::allocator<Object>]'
/usr/include/c++/4.8/bits/vector.tcc:415:43:   required from 'void std::vector<_Tp, _Alloc>::_M_emplace_back_aux(_Args&& ...) [with _Args = {Object}; _Tp = Object; _Alloc = std::allocator<Object>]'
/usr/include/c++/4.8/bits/vector.tcc:101:54:   required from 'void std::vector<_Tp, _Alloc>::emplace_back(_Args&& ...) [with _Args = {Object}; _Tp = Object; _Alloc = std::allocator<Object>]'
/usr/include/c++/4.8/bits/stl_vector.h:920:36:   required from 'void std::vector<_Tp, _Alloc>::push_back(std::vector<_Tp, _Alloc>::value_type&&) [with _Tp = Object; _Alloc = std::allocator<Object>; std::vector<_Tp, _Alloc>::value_type = Object]'
main.cpp:26:31:   required from here
/usr/include/c++/4.8/bits/stl_construct.h:75:7: error: use of deleted function 'Object::Object(const Object&)'
     { ::new(static_cast<void*>(__p)) _T1(std::forward<_Args>(__args)...); }
       ^
